--- a/UI/Resources/GraphBrushes.xaml
+++ b/UI/Resources/GraphBrushes.xaml
@@ -2,6 +2,7 @@
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:local="clr-namespace:UI.Resources">
     <SolidColorBrush x:Key="MainBrush" Color="#FF54CCBB"/>
+    <SolidColorBrush x:Key="MainBrushDirt" Color="#FF60AACC"/>
     <SolidColorBrush x:Key="RadialMenuGray" Color="#FFD6D6D6"/>
     <ImageBrush x:Key="CloseImage" ImageSource="Images/close.png"/>
     <ImageBrush x:Key="CloseImageWhite" ImageSource="Images/close_w.png"/>
