--- a/UI/PathModalView.xaml
+++ b/UI/PathModalView.xaml
@@ -6,26 +6,76 @@
         xmlns:model="clr-namespace:UI.ViewModels"
         xmlns:infra="clr-namespace:UI.Infrastructure"
         mc:Ignorable="d"
-        Title="" Height="200" Width="400" WindowStyle="ToolWindow" WindowStartupLocation="CenterOwner">
+        Title="" Height="300" Width="200" WindowStyle="ToolWindow" WindowStartupLocation="CenterOwner">
     <Window.DataContext>
-       <model:PathSelectionViewModel/>
+        <model:PathSelectionViewModel/>
     </Window.DataContext>
+    <Window.Resources>
+        <Style TargetType="ComboBox">
+            <Setter Property="HorizontalAlignment" Value="Stretch"/>
+            <Setter Property="VerticalAlignment" Value="Stretch"/>
+            <Setter Property="Margin" Value="15,10"/>
+            <Setter Property="HorizontalContentAlignment" Value="Left"/>
+            <Setter Property="VerticalContentAlignment" Value="Center"/>
+            <Setter Property="FontSize" Value="13.33"/>
+        </Style>
+        <Style TargetType="ComboBoxItem">
+
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="ComboBoxItem">
+                        <Border x:Name="_Border"
+                                Padding="{TemplateBinding Padding}"
+                                Background="{TemplateBinding Background}"
+                                BorderBrush="{TemplateBinding BorderBrush}"
+                                BorderThickness="1"
+                                SnapsToDevicePixels="true">
+                            <ContentPresenter />
+                        </Border>
+                        <ControlTemplate.Triggers>
+                            <Trigger Property="IsMouseOver" Value="True">
+                                <Setter TargetName="_Border" Property="Background" Value="{StaticResource MainBrush}"/>
+                            </Trigger>
+                            <Trigger Property="IsSelected" Value="true">
+                                <Setter TargetName="_Border" Property="Background" Value="{StaticResource MainBrushDirt}"/>
+                            </Trigger>
+                        </ControlTemplate.Triggers>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+            <Style.Triggers>
+                <Trigger Property="IsMouseOver" Value="True">
+                    <Setter Property="Foreground" Value="White"/>
+                </Trigger>
+                <Trigger Property="IsSelected" Value="True">
+                    <Setter Property="Foreground" Value="White"/>
+                </Trigger>
+            </Style.Triggers>
+        </Style>
+        <Style TargetType="Button">
+            <Setter Property="HorizontalAlignment" Value="Center"/>
+            <Setter Property="Background" Value="{StaticResource MainBrush}"/>
+            <Setter Property="BorderBrush" Value="Transparent"/>
+            <Setter Property="Foreground" Value="White"/>
+            <Setter Property="FontSize" Value="15"/>
+            <Setter Property="Padding" Value="15,10"/>
+            <Setter Property="HorizontalContentAlignment" Value="Center"/>
+            <Setter Property="FontWeight" Value="DemiBold"/>
+            <Setter Property="Margin" Value="10"/>
+        </Style>
+    </Window.Resources>
     <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition Height="63*"/>
-            <RowDefinition Height="53*"/>
-            <RowDefinition Height="54*"/>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="100*"/>
-            <ColumnDefinition Width="40*"/>
-            <ColumnDefinition Width="100*"/>
-        </Grid.ColumnDefinitions>
-        <TextBlock Text="Выбирите начальную вершину" VerticalAlignment="Bottom" Grid.Row="0" Grid.Column="0"/>
-        <TextBlock Text="Выбирите конечную вершину" VerticalAlignment="Bottom" Grid.Row="0" Grid.Column="2"/>
-        <ComboBox Grid.Column="0" VerticalAlignment="Center" Margin="10,11,10,20" Grid.Row="1" ItemsSource="{Binding VerticeNames}" SelectedIndex="{Binding StartVerticeIndex}"/>
-        <ComboBox Grid.Column="2" VerticalAlignment="Center" Margin="10,11,10,20" Grid.Row="1" ItemsSource="{Binding VerticeNames}" SelectedIndex="{Binding EndVerticeIndex}"/>
-        <Button VerticalAlignment="Center" HorizontalAlignment="Center" Grid.ColumnSpan="3" Grid.Column="0" Grid.Row="2"
+        <TextBlock Grid.Row="0" Text="Выбирите начальную и конечную вершины"
+                   Foreground="DarkGray" Margin="10" FontSize="15"/>
+        <ComboBox Grid.Row="1" ItemsSource="{Binding VerticeNames}" SelectedIndex="{Binding StartVerticeIndex}"/>
+        <ComboBox Grid.Row="2" ItemsSource="{Binding VerticeNames}" SelectedIndex="{Binding EndVerticeIndex}"/>
+        <Button Grid.Row="3" 
                 Command="{Binding Source={x:Static infra:CommandEventBinder.SelectPathCommand}}"
                 CommandParameter="{Binding VerticePair}">
             Выбрать вершины
