--- a/UI/App.xaml
+++ b/UI/App.xaml
@@ -1,6 +1,7 @@
 ﻿<Application x:Class="UI.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" Startup="Application_Startup"
+             DispatcherUnhandledException="App_OnDispatcherUnhandledException"
              xmlns:converters="clr-namespace:UI.Converters">
     <Application.Resources>
         <ResourceDictionary>
