Не считаем пока циклы

--- a/UI/Controls/ArrowView.xaml
+++ b/UI/Controls/ArrowView.xaml
@@ -14,8 +14,9 @@
           Fill="{Binding ElementName=This, Path=BorderBrush}"/>
     <UserControl.Style>
         <Style TargetType="UserControl">
-            <Setter Property="BorderBrush" Value="DarkGray"/>
+            <Setter Property="BorderBrush" Value="Gainsboro"/>
             <Setter Property="Background" Value="Transparent"/>
+            <Setter Property="Opacity" Value="1"/>
         </Style>
     </UserControl.Style>
 </UserControl>
