--- a/UI/Resources/RadiusMenuItemStyle.xaml
+++ b/UI/Resources/RadiusMenuItemStyle.xaml
@@ -28,15 +28,15 @@
         </Style.Triggers>
     </Style>
     <Style TargetType="rm:RadialMenuCentralItem">
-        <Setter Property="Background" Value="{StaticResource MainBrush}"/>
-        <Setter Property="BorderBrush" Value="{StaticResource MainBrush}"/>
+        <Setter Property="Background" Value="OrangeRed"/>
+        <Setter Property="BorderBrush" Value="OrangeRed"/>
         <Setter Property="Height" Value="80"/>
         <Setter Property="Width" Value="80"/>
         <Setter Property="Cursor" Value="Hand"/>
         <Style.Triggers>
             <Trigger Property="IsMouseOver" Value="True">
                 <Setter Property="Background" Value="White"/>
-                <Setter Property="BorderBrush" Value="{StaticResource MainBrush}"/>
+                <Setter Property="BorderBrush" Value="OrangeRed"/>
             </Trigger>
         </Style.Triggers>
     </Style>
