--- a/UI/Controls/CircularProgressBar.xaml
+++ b/UI/Controls/CircularProgressBar.xaml
@@ -187,7 +187,8 @@
                 <RowDefinition Height="*"/>
                 <RowDefinition Height="*"/>
             </Grid.RowDefinitions>
-            <Ellipse x:Name="ellipse" Grid.Column="1" Grid.Row="0" Width="28" Height="28" Stretch="Fill" Fill="{Binding ElementName=CircularPb, Path=Foreground}"/>
+            <Ellipse x:Name="ellipse" Grid.Column="1" Grid.Row="0" Width="28" Height="28" Stretch="Fill" Fill="{Binding ElementName=CircularPb, Path=Foreground}">
+            </Ellipse>
             <Ellipse x:Name="ellipse1" Grid.Column="0" Grid.Row="1" Width="22" Height="22" Stretch="Fill" Fill="{Binding ElementName=CircularPb, Path=Foreground}"/>
             <Ellipse x:Name="ellipse2" Grid.Column="1" Grid.Row="2" Width="16" Height="16" Stretch="Fill" Fill="{Binding ElementName=CircularPb, Path=Foreground}"/>
             <Ellipse x:Name="ellipse3" Grid.Column="2" Grid.Row="1" Width="10" Height="10" Stretch="Fill" Fill="{Binding ElementName=CircularPb, Path=Foreground}"/>
