--- a/UI/MainWindow.xaml
+++ b/UI/MainWindow.xaml
@@ -15,7 +15,7 @@
     </Window.DataContext>
     <Window.Resources>
         <Style TargetType="Border" x:Key="Placeholder">
-            <Setter Property="Visibility" Value="Hidden"/>
+            <Setter Property="Visibility" Value="Visible"/>
             <Style.Triggers>
                 <DataTrigger Binding="{Binding IsGraphLoaded}" Value="True">
                     <Setter Property="Visibility" Value="Hidden"/>
@@ -57,6 +57,7 @@
                 <!-- Информация о графе -->
                 <Grid>
                     <Grid.RowDefinitions>
+                        <RowDefinition Height="Auto" />
                         <RowDefinition Height="Auto" />
                         <RowDefinition Height="Auto" />
                         <RowDefinition Height="Auto" />
@@ -118,6 +119,11 @@
                                Text="Отклонение по выходам"/>
                     <TextBlock Grid.Row="9" Grid.Column="1"
                                Text="{Binding GraphInformationModel.OutdegreeStandartDeviation}"/>
+                    
+                    <TextBlock Grid.Row="10" Grid.Column="0"
+                               Text="Плотность графа"/>
+                    <TextBlock Grid.Row="10" Grid.Column="1"
+                               Text="{Binding GraphInformationModel.Density}"/>
                 </Grid>
             </Border>
             <TextBlock Grid.Row="2" Grid.Column="0" Text="Информация о вершине"
